fix: root element spacing fixed

--- a/packages/web/src/styles/globals.css
+++ b/packages/web/src/styles/globals.css
@@ -28,8 +28,13 @@ a {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-*:not(body){
-  /* animation: fadeIn 1s ease-in-out ; */
+*{
+  animation: fadeIn 1s ease-in-out ;
+}
+
+.navbar{
+  background-color: red !important;
+  transform: unset !important;
 }
 
 @keyframes fadeIn {
@@ -44,7 +49,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-  display: none;
+  display: none; /* scrollbar 🤢 */
   width: 12px;
   height: 12px;
 }
@@ -86,7 +91,7 @@ a {
 }
 
 .nav-box {
-  @apply mx-2 cursor-pointer focus-within:ring-2 focus-within:ring-pink-1 text-white font-semibold my-2 md:my-0 px-4;
+  @apply mx-2 w-[calc(100%-4px)] md:w-fit cursor-pointer focus-within:ring-2 focus-within:ring-pink-1 text-white font-semibold my-2 md:my-0 px-4;
 }
 
 .after-glow {
